learn booleansin javascript

--- a/JS/Tutorial/05-variables.html
+++ b/JS/Tutorial/05-variables.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Variables</title>
 </head>
 
@@ -28,6 +29,14 @@
         console.log(variable1);
         variable1 ++;
         console.log(variable1);
+
+        const variable2 = 3;
+        console.log(variable2);
+
+        var variable3 = 3;
+
+        console.log(typeof 3);
+        console.log(typeof message);
     </script>
 </body>
 </html>
