--- a/JS/Tutorial/05-cart-quantity.html
+++ b/JS/Tutorial/05-cart-quantity.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart Quantity</title>
+    <style>
+        button{
+            background-color: aqua;
+            justify-content: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,11 +22,11 @@
     ">Add to cart</button>
 
     <button onclick="
-    cartQuantity = cartQuantity + 2;
+    cartQuantity += 2;
     console.log(`Cart quantity: ${cartQuantity}`);">+2</button>
 
     <button onclick="
-    cartQuantity = cartQuantity + 3;
+    cartQuantity += 3;
     console.log(`Cart quantity: ${cartQuantity}`);">+3</button>
 
     <button onclick="
@@ -31,7 +37,6 @@
 
     <script>
         let cartQuantity = 0;
-
     </script>
 </body>
 </html>
